--- a/index.html
+++ b/index.html
@@ -15,13 +15,18 @@
     <body class="content">
         <header>
             <h1>Gopi & Eric Wedding, Oct 4, 2014</h1>
+            <img class="banner" src="images/fall_skyline2.jpeg" />
         </header>
         <div class="row">
             <div class="col-sm-3">
                 <div class="well bs-sidebar affix" id="sidebar">
                     <ul class="nav nav-pills nav-stacked">
-                        <li><a href="#">Link 1</a></li>
-                        <li><a href="#">Link 2</a></li>
+                        <li><a href="#">Gopi & Eric's Wedding</a></li>
+                        <li><a href="#">Our Story</a></li>
+                        <li><a href="#">Bridal Party</a></li>
+                        <li><a href="#">Wedding Registry</a></li>
+                        <li><a href="#">Hotels</a></li>
+                        <li><a href="#">Weekend Schedule</a></li>
                     </ul>
                 </div>
             </div>
