changes for homepage, including header and navbar and styles

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
         <meta charset="utf-8">
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=8">
-        <meta name="keywords" content="Gopi, Eric, wedding, site, fusion, new york, marriage">
-        <meta name="description" content="Gopi and Eric wedding website">
+        <meta name="keywords" content="Gopi, Eric, Connelly, Desai, wedding, site, indian, fusion, new york, nyc, marriage">
+        <meta name="description" content="Gopi and Eric Connelly wedding website">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <title>Gopi and Eric wedding website</title>
@@ -14,28 +14,45 @@
     </head>
     <body class="content">
         <header>
-            <h1>Gopi & Eric Wedding, Oct 4, 2014</h1>
-            <img class="banner" src="images/fall_skyline2.jpeg" />
+            <img class="top-left" src="images/red_elephant.jpg" />
+            <h1 class="main-title wedding-font">Gopi & Eric</h1>
+            <img class="top-right" src="images/red_elephant.jpg" />
         </header>
+        <nav class="navbar navbar-default" role="navigation">
+            <div class="collapse navbar-collapse" id="navbar-our-story">
+                <ul class="nav navbar-nav">
+                    <li><a href="#">Our Story</a></li>
+                    <li><a href="#">Bridal Party</a></li>
+                    <li><a href="#">Wedding Schedule</a></li>
+                    <li><a href="#">Hotel</a></li>
+                    <li><a href="#">Registry</a></li>
+                </ul>
+            </div>  
+        </nav>
+
+<!-- Begin Page-specific content here -->
+        <h3 class="page-title">Welcome to our wedding website</h3>
         <div class="row">
-            <div class="col-sm-3">
-                <div class="well bs-sidebar affix" id="sidebar">
-                    <ul class="nav nav-pills nav-stacked">
-                        <li><a href="#">Gopi & Eric's Wedding</a></li>
-                        <li><a href="#">Our Story</a></li>
-                        <li><a href="#">Bridal Party</a></li>
-                        <li><a href="#">Wedding Registry</a></li>
-                        <li><a href="#">Hotels</a></li>
-                        <li><a href="#">Weekend Schedule</a></li>
-                    </ul>
-                </div>
-            </div>
-            <div class="col-sm-9">
+            <div class="col-sm-6">
                 <p>
-                    Gopi and Eric's wedding website (under construction, sorry!)
+                    Our story starts on the 3rd floor of Tilton Hall where we met during our freshmen year at Tufts University.
+We started dating soon after meeting and have been in love ever since. We have had lots of years of enjoying dinners, wines, vacations and chats with our favorite people
+and we can't wait to celebrate the biggest night of all with you soon!
+<br>
+<br>
+Everything you need to know about the wedding weekend's schedule of events, hotel accomodations, our registry and anything else should be listed here on the site.
+If you find something is not clear, please do let us know.  Thanks!  We can't wait!
+<br>
+Eric & Gopi
+<br>
+(eric.connelly08@gmail.com & gdesai08@gmail.com)
                 </p>
             </div>
+            <div class="col-sm-6">
+                <img class="col-sm-9" src="images/home/eric_gopi_1.jpg" />
+            </div>
         </div>
+<!-- End Page-specific content here -->
 
         <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
         <script src="https://code.jquery.com/jquery.js"></script>
