Centered title with date, and got font working

--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
     </head>
     <body class="content">
         <header>
-            <img class="top-left" src="images/red_elephant.jpg" />
+            <img class="left-icon" src="images/red_elephant.jpg" />
             <h1 class="main-title wedding-font">Gopi & Eric</h1>
-            <img class="top-right" src="images/red_elephant.jpg" />
+            <img class="right-icon" src="images/red_elephant.jpg" />
+            <span class="main-sub-title wedding-font">10.4.2014</span>
         </header>
         <nav class="navbar navbar-default" role="navigation">
             <div class="collapse navbar-collapse" id="navbar-our-story">
@@ -35,13 +36,18 @@
         <div class="row">
             <div class="col-sm-6">
                 <p>
-                    Our story starts on the 3rd floor of Tilton Hall where we met during our freshmen year at Tufts University.
-We started dating soon after meeting and have been in love ever since. We have had lots of years of enjoying dinners, wines, vacations and chats with our favorite people
-and we can't wait to celebrate the biggest night of all with you soon!
+                    Our story started on the 3rd floor of Tilton Hall where we met during our freshmen year at Tufts University.
+We started dating soon after meeting and have been in love ever since. We have had lots of years of enjoying dinners, wines and vacations together.  We have been blessed to know some fantastic people
+and we can't wait to see you all soon to celebrate our biggest day yet!
 <br>
 <br>
 Everything you need to know about the wedding weekend's schedule of events, hotel accomodations, our registry and anything else should be listed here on the site.
-If you find something is not clear, please do let us know.  Thanks!  We can't wait!
+If you find something is not clear, please do let us know.
+<br>
+Thanks!
+<br>
+We can't wait!
+<br>
 <br>
 Eric & Gopi
 <br>
