Fixed elephant to have transparent background. Added 2nd elephant to header

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     </head>
     <body class="content">
         <header>
-            <img class="left-icon" src="images/red_elephant.jpg" />
+            <img src="images/red_elephant_transparent_left.png" />
+            <img src="images/red_elephant_transparent_right.png" />
             <h1 class="main-title wedding-font">Gopi & Eric</h1>
             <span class="main-sub-title wedding-font">10.4.2014</span>
         </header>
