Implement welcome page with full-screen background image

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
         <link rel="stylesheet" href="css/bootstrap.min.css" />
         <link rel="stylesheet" href="css/main.css" />
     </head>
-    <body class="content">
+    <body class="content-container">
         <header>
-            <img src="images/red_elephant_transparent_left.png" />
-            <img src="images/red_elephant_transparent_right.png" />
+            <img class="elephant-icon" src="images/red_elephant_transparent_left.png" />
+            <img class="elephant-icon" src="images/red_elephant_transparent_right.png" />
             <h1 class="main-title wedding-font">Gopi & Eric</h1>
             <span class="main-sub-title wedding-font">10.4.2014</span>
         </header>
