Adding some stubs for other site pages

--- a/index.html
+++ b/index.html
@@ -11,54 +11,31 @@
         <title>Gopi and Eric wedding website</title>
         <link rel="stylesheet" href="css/bootstrap.min.css" />
         <link rel="stylesheet" href="css/main.css" />
+        <link rel="stylesheet" href="css/welcome.css" />
     </head>
-    <body class="content-container">
-        <header>
-            <img class="elephant-icon" src="images/red_elephant_transparent_left.png" />
-            <img class="elephant-icon" src="images/red_elephant_transparent_right.png" />
-            <h1 class="main-title wedding-font">Gopi & Eric</h1>
-            <span class="main-sub-title wedding-font">10.4.2014</span>
-        </header>
-        <nav class="navbar navbar-default" role="navigation">
-            <div class="collapse navbar-collapse" id="navbar-our-story">
-                <ul class="nav navbar-nav">
-                    <li><a href="#">Our Story</a></li>
-                    <li><a href="#">Bridal Party</a></li>
-                    <li><a href="#">Wedding Schedule</a></li>
-                    <li><a href="#">Hotel</a></li>
-                    <li><a href="#">Registry</a></li>
-                </ul>
-            </div>  
-        </nav>
+    <body class="content">
+        <div class="fullscreen-cont">
+            <div class="fullscreen-img"></div>
 
-<!-- Begin Page-specific content here -->
-        <h3 class="page-title">Welcome to our wedding website</h3>
-        <div class="row">
-            <div class="col-sm-6">
-                <p>
-                    Our story started on the 3rd floor of Tilton Hall where we met during our freshmen year at Tufts University.
-We started dating soon after meeting and have been in love ever since. We have had lots of years of enjoying dinners, wines and vacations together.  We have been blessed to know some fantastic people
-and we can't wait to see you all soon to celebrate our biggest day yet!
-<br>
-<br>
-Everything you need to know about the wedding weekend's schedule of events, hotel accomodations, our registry and anything else should be listed here on the site.
-If you find something is not clear, please do let us know.
-<br>
-Thanks!
-<br>
-We can't wait!
-<br>
-<br>
-Eric & Gopi
-<br>
-(eric.connelly08@gmail.com & gdesai08@gmail.com)
-                </p>
-            </div>
-            <div class="col-sm-6">
-                <img class="col-sm-9" src="images/home/eric_gopi_1.jpg" />
-            </div>
+            <div class="title main wedding-font">Gopi & Eric</div>
+            <div class="title date-title wedding-font">10.4.2014</div>
         </div>
-<!-- End Page-specific content here -->
+
+            <div class="content">
+
+                <nav class="navbar navbar-default" role="navigation">
+                    <div class="collapse navbar-collapse" id="navbar-our-story">
+                        <ul class="nav navbar-nav">
+                            <li><a href="home.html">Home</a></li>
+                            <li><a href="bridal-party.html">Bridal Party</a></li>
+                            <li><a href="details.html">Wedding Schedule</a></li>
+                            <li><a href="hotel.html">Hotel</a></li>
+                            <li><a href="registry.html">Registry</a></li>
+                        </ul>
+                    </div>
+                </nav>
+            </div>
+
 
         <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
         <script src="https://code.jquery.com/jquery.js"></script>
