Content for Registry/Hotel pages. Some restyle for Bridal Party images

--- a/registry.html
+++ b/registry.html
@@ -32,31 +32,18 @@
         </nav>
 
 <!-- Begin Page-specific content here -->
-        <h3 class="page-title">Welcome to our wedding website</h3>
         <div class="row">
-            <div class="col-sm-6">
-                <p>
-                    Our story started on the 3rd floor of Tilton Hall where we met during our freshmen year at Tufts University.
-We started dating soon after meeting and since then we have had lots of years of enjoying dinners, wines and vacations together.  We have been blessed to know some fantastic people
-and we can't wait to see you all soon to celebrate our biggest day yet!
-<br>
-<br>
-Everything you need to know about the wedding weekend's schedule of events, hotel accomodations, our registry and anything else should be listed here on the site.
-If you find something is not clear, please do let us know.
-<br>
-<br>
-Thanks!
-<br>
-We can't wait!
-<br>
-<br>
-Eric & Gopi
-<br>
-(eric.connelly08@gmail.com & gdesai08@gmail.com)
-                </p>
-            </div>
-            <div class="col-sm-6">
-                <img class="col-sm-9" src="images/home/eric_gopi_1.jpg" />
+            <div class="center-col-9">
+                <div class="col-sm-3">
+                    <h3 class="page-title">Our Registries</h3>
+                    <!--<a href="#" target="_blank">
+                        <img class="registry__icon" src="images/registry/macys.jpg" alt="Macys" />
+                    </a>-->
+                    <span>Work in progress! Please check back later</span>
+                </div>
+                <div class="col-sm-6">
+                    <img class="col-sm-12" src="images/registry/happy.jpg" alt="Presents!" />
+                </div>
             </div>
         </div>
 <!-- End Page-specific content here -->
