--- a/hotel.html
+++ b/hotel.html
@@ -32,31 +32,24 @@
         </nav>
 
 <!-- Begin Page-specific content here -->
-        <h3 class="page-title">Welcome to our wedding website</h3>
         <div class="row">
-            <div class="col-sm-6">
-                <p>
-                    Our story started on the 3rd floor of Tilton Hall where we met during our freshmen year at Tufts University.
-We started dating soon after meeting and since then we have had lots of years of enjoying dinners, wines and vacations together.  We have been blessed to know some fantastic people
-and we can't wait to see you all soon to celebrate our biggest day yet!
-<br>
-<br>
-Everything you need to know about the wedding weekend's schedule of events, hotel accomodations, our registry and anything else should be listed here on the site.
-If you find something is not clear, please do let us know.
-<br>
-<br>
-Thanks!
-<br>
-We can't wait!
-<br>
-<br>
-Eric & Gopi
-<br>
-(eric.connelly08@gmail.com & gdesai08@gmail.com)
-                </p>
-            </div>
-            <div class="col-sm-6">
-                <img class="col-sm-9" src="images/home/eric_gopi_1.jpg" />
+            <div class="center-col-9">
+                <div class="col-sm-3">
+                    <h3 class="page-title">Fishkill Hyatt House</h3>
+                    <p>
+                        100 Westage Business Ctr Dr
+                        <br>
+                        Fishkill, NY 12524
+                        <br>
+                        Tel: 1-845-897-5757
+                    </p>
+                    <a href="http://www.fishkill.house.hyatt.com/en/hotel/home.html" target="_blank">more info</a>
+                </div>
+                <div class="col-sm-6">
+                    <a href="http://www.fishkill.house.hyatt.com/en/hotel/home.html" target="_blank">
+                        <img class="col-sm-12" src="images/hotel/hyatt.jpg" alt="Hyatt House hotel" />
+                    </a>
+                </div>
             </div>
         </div>
 <!-- End Page-specific content here -->
