New bridal party style, html and possible pics

--- a/bridal-party.html
+++ b/bridal-party.html
@@ -24,7 +24,6 @@
                 <ul class="nav navbar-nav">
                     <li><a href="home.html">Home</a></li>
                     <li><a href="bridal-party.html">Bridal Party</a></li>
-                    <li><a href="details.html">Wedding Schedule</a></li>
                     <li><a href="hotel.html">Hotel</a></li>
                     <li><a href="registry.html">Registry</a></li>
                 </ul>
@@ -36,28 +35,36 @@
             <div class="col-sm-6">
                 <h3 class="column-title">Hers</h3>
                 <div class="bridal-party__container">
-                    <div class="bridal-party__name">Medini Ciavardoni</div>
-                    <div class="bridal-party__description">We have been friends since we were 5 years old. We spent many summers together at the Ashram getting into mischief. (Her fault)</div>
+                    <div class="bridal-party__entry">
+                        <div class="bridal-party__name">Medini Ciavardoni</div>
+                        <div class="bridal-party__description">We have been friends since we were 5 years old. We spent many summers together at the Ashram getting into mischief. (Her fault)</div>
+                    </div>
+                    <img id="medini-pic" class="bridal-party__img" src="images/party/medini.jpg" />
                 </div>
-                <img id="medini-pic" class="bridal-party__img" src="images/party/medini.jpg" />
                 <div class="bridal-party__container">
-                    <div class="bridal-party__name">Maggie Kissel</div>
-                    <div class="bridal-party__description">My roommate in Med School, she is great for keeping me alive and sane</div>
+                    <div class="bridal-party__entry">
+                        <div class="bridal-party__name">Maggie Kissel</div>
+                        <div class="bridal-party__description">My roommate in Med School, she is great for keeping me alive and sane</div>
+                    </div>
+                    <img id="maggie-pic" class="bridal-party__img" src="images/party/maggie.jpg" />
                 </div>
-                <img id="maggie-pic" class="bridal-party__img" src="images/party/maggie.jpg" />
             </div>
             <div class="col-sm-6">
                 <h3 class="column-title">His</h3>
                 <div class="bridal-party__container">
-                    <div class="bridal-party__name">Jesse Ruben</div>
-                    <div class="bridal-party__description">He bought me milk when we were 10 and we have been friends ever since.</div>
+                    <div class="bridal-party__entry">
+                        <div class="bridal-party__name">Jesse Ruben</div>
+                        <div class="bridal-party__description">He bought me milk when we were 10 and we have been friends ever since.</div>
+                    </div>
+                    <img id="jesse-pic" class="bridal-party__img" src="images/party/jesse.jpg" />
                 </div>
-                <img id="jesse-pic" class="bridal-party__img" src="images/party/jesse.jpg" />
                 <div class="bridal-party__container">
-                    <div class="bridal-party__name">Scott Connelly</div>
-                    <div class="bridal-party__description">Great brother. Excellent collector of pokemon cards.</div>
+                    <div class="bridal-party__entry">
+                        <div class="bridal-party__name">Scott Connelly</div>
+                        <div class="bridal-party__description">Great brother. Excellent collector of pokemon cards.</div>
+                    </div>
+                    <img id="scott-pic" class="bridal-party__img" src="images/party/scott.jpg" />
                 </div>
-                <img id="scott-pic" class="bridal-party__img" src="images/party/scott.jpg" />
             </div>
         </div>
 <!-- End Page-specific content here -->
