Redesigning menu navbar with selected tab in purple

--- a/home.html
+++ b/home.html
@@ -22,12 +22,14 @@
         <nav class="navbar navbar-default" role="navigation">
             <div class="collapse navbar-collapse" id="navbar-our-story">
                 <ul class="nav navbar-nav">
-                    <li><a href="home.html">Home</a></li>
+                    <li><a class="selected" href="home.html">Home</a></li>
                     <li><a href="bridal-party.html">Bridal Party</a></li>
                     <li><a href="hotel.html">Hotel</a></li>
                     <li><a href="registry.html">Registry</a></li>
                 </ul>
             </div>  
+            <div class="navbar__border-bottom">
+            </div>
         </nav>
 
 <!-- Begin Page-specific content here -->
