Updating all pages with new navbar and selected-tab styles

--- a/index.html
+++ b/index.html
@@ -24,12 +24,18 @@
             <div class="content">
 
                 <nav class="navbar navbar-default" role="navigation">
-                    <div class="collapse navbar-collapse" id="navbar-our-story">
+                    <div class="collapse navbar-collapse" id="eg-navbar">
+                        <div class="navbar-icon__container">
+                            <img class="elephant-icon--small" src="images/red_elephant_transparent_left.png" />
+                            <img class="elephant-icon--small" src="images/red_elephant_transparent_right.png" />
+                        </div>
                         <ul class="nav navbar-nav">
-                            <li><a href="home.html">Home</a></li>
-                            <li><a href="bridal-party.html">Bridal Party</a></li>
+                            <li><a class="selected rounded-border" href="index.html">Home</a></li>
+                            <li><a href="details.html">Schedule of Events</a></li>
                             <li><a href="hotel.html">Hotel</a></li>
                             <li><a href="registry.html">Registry</a></li>
+                            <li><a href="bridal-party.html">Wedding Party</a></li>
+                            <li><a href="gallery.html">Gallery</a></li>
                         </ul>
                     </div>
                 </nav>
