--- a/registry.html
+++ b/registry.html
@@ -14,20 +14,26 @@
     </head>
     <body class="content-container">
         <header>
-            <img class="elephant-icon" src="images/red_elephant_transparent_left.png" />
-            <img class="elephant-icon" src="images/red_elephant_transparent_right.png" />
             <h1 class="main-title wedding-font">Gopi & Eric</h1>
             <span class="main-sub-title wedding-font">10.4.2014</span>
         </header>
         <nav class="navbar navbar-default" role="navigation">
             <div class="collapse navbar-collapse" id="navbar-our-story">
+                <div class="navbar-icon__container">
+                    <img class="elephant-icon--small" src="images/red_elephant_transparent_left.png" />
+                    <img class="elephant-icon--small" src="images/red_elephant_transparent_right.png" />
+                </div>
                 <ul class="nav navbar-nav">
-                    <li><a href="home.html">Home</a></li>
-                    <li><a href="bridal-party.html">Bridal Party</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="details.html">Schedule of Events</a></li>
                     <li><a href="hotel.html">Hotel</a></li>
-                    <li><a href="registry.html">Registry</a></li>
+                    <li><a class="selected" href="registry.html">Registry</a></li>
+                    <li><a href="bridal-party.html">Wedding Party</a></li>
+                    <li><a href="gallery.html">Gallery</a></li>
                 </ul>
-            </div>  
+            </div>
+            <div class="navbar__border-bottom">
+            </div>
         </nav>
 
 <!-- Begin Page-specific content here -->
