Filling in some initial info to details/schedule tab

--- a/details.html
+++ b/details.html
@@ -37,16 +37,24 @@
         </nav>
 
 <!-- Begin Page-specific content here -->
-        <h3 class="page-title">Details to Know</h3>
         <div class="row">
-            <div class="col-sm-12">
-                <h3>Friday</h3>
-                <div>Rehearsal at The Garrison, X:00 pm.</div>
-                <div>Rehearsal Dinner at ?? to follow</div>
+            <div class="col-sm-6">
+                <h3>The Garrison</h3>
+                <div>Ceremony and reception will be held on
+                    <strong>Saturday, October 4, 2014</strong>
+                    <br><br>
+                    <strong>The Garrison Golf Club</strong><br>
+                    2015 US 9,<br>
+                    Garrison, New York 10524<br>
+                    (845)-424-3604<br>
+                    <a href="http://www.thegarrison.com/general-information.html">more information</a>
+                    <br><br>
+                    Further details, including the time of the ceremony, will be provided in the invitations.
+                    Shuttle buses will be provided as transportation from the Hyatt hotel.
+                </div>
             </div>
-            <div class="col-sm-12">
-                <h3>Saturday</h3>
-                <div>Wedding ceremony begins at 4:00 pm</div>
+            <div class="col-sm-6">
+                <img class="col-sm-9" src="images/the-garrison.jpg" alt="View of the Garrison" />
             </div>
         </div>
 <!-- End Page-specific content here -->
