--- a/hotel.html
+++ b/hotel.html
@@ -14,8 +14,10 @@
     </head>
     <body class="content-container">
         <header>
-            <h1 class="main-title wedding-font">Gopi & Eric</h1>
-            <span class="main-sub-title wedding-font">10.4.2014</span>
+            <a href="index.html">
+                <h1 class="main-title wedding-font">Gopi & Eric</h1>
+                <span class="main-sub-title wedding-font">10.4.2014</span>
+            </a>
         </header>
         <nav class="navbar navbar-default" role="navigation">
             <div class="collapse navbar-collapse" id="navbar-our-story">
