Adding Gallery page and images, and adding second hotel info

--- a/bridal-party.html
+++ b/bridal-party.html
@@ -14,19 +14,21 @@
     </head>
     <body class="content-container">
         <header>
-            <a href="index.html">
-                <h1 class="main-title wedding-font">Gopi & Eric</h1>
-                <span class="main-sub-title wedding-font">10.4.2014</span>
-            </a>
+            <div class="main-title__container">
+                <a href="index.html">
+                    <span class="main-title wedding-font">Gopi & Eric</span>
+                    <br>
+                    <span class="main-sub-title wedding-font">10.4.2014</span>
+                </a>
+            </div>
         </header>
         <nav class="navbar navbar-default" role="navigation">
             <div class="collapse navbar-collapse" id="navbar-our-story">
-                <div class="navbar-icon__container">
+                <a href="index.html" class="navbar-icon__container">
                     <img class="elephant-icon--small" src="images/red_elephant_transparent_left.png" />
                     <img class="elephant-icon--small" src="images/red_elephant_transparent_right.png" />
-                </div>
+                </a>
                 <ul class="nav navbar-nav">
-                    <li><a href="index.html">Home</a></li>
                     <li><a href="details.html">Schedule of Events</a></li>
                     <li><a href="hotel.html">Hotel</a></li>
                     <li><a href="registry.html">Registry</a></li>
