--- a/details.html
+++ b/details.html
@@ -14,19 +14,21 @@
     </head>
     <body class="content-container">
         <header>
-            <a href="index.html">
-                <h1 class="main-title wedding-font">Gopi & Eric</h1>
-                <span class="main-sub-title wedding-font">10.4.2014</span>
-            </a>
+            <div class="main-title__container">
+                <a href="index.html">
+                    <span class="main-title wedding-font">Gopi & Eric</span>
+                    <br>
+                    <span class="main-sub-title wedding-font">10.4.2014</span>
+                </a>
+            </div>
         </header>
         <nav class="navbar navbar-default" role="navigation">
             <div class="collapse navbar-collapse" id="navbar-our-story">
-                <div class="navbar-icon__container">
+                <a href="index.html" class="navbar-icon__container">
                     <img class="elephant-icon--small" src="images/red_elephant_transparent_left.png" />
                     <img class="elephant-icon--small" src="images/red_elephant_transparent_right.png" />
-                </div>
+                </a>
                 <ul class="nav navbar-nav">
-                    <li><a href="index.html">Home</a></li>
                     <li><a class="selected" href="details.html">Schedule of Events</a></li>
                     <li><a href="hotel.html">Hotel</a></li>
                     <li><a href="registry.html">Registry</a></li>
@@ -41,18 +43,21 @@
 <!-- Begin Page-specific content here -->
         <div class="row">
             <div class="col-sm-6">
-                <h3>The Garrison</h3>
+                <h3>Saturday: The Ceremony</h3>
                 <div>Ceremony and reception will be held on
                     <strong>Saturday, October 4, 2014</strong>
                     <br><br>
                     <strong>The Garrison Golf Club</strong><br>
-                    2015 US 9,<br>
+                    2015 US 9<br>
                     Garrison, New York 10524<br>
                     (845)-424-3604<br>
-                    <a href="http://www.thegarrison.com/general-information.html">more information</a>
+                    <a href="http://www.thegarrison.com/contact-us.html" target="_blank">more information</a>
                     <br><br>
                     Further details, including the time of the ceremony, will be provided in the invitations.
-                    Shuttle buses will be provided as transportation from the Hyatt hotel.
+                    Transportation from the Hyatt House and Marriott Courtyard Fishkill hotels.
+                </div>
+                <h3>Sunday: Brunch</h3>
+                <div>Brunch will be served Sunday morning at the Hyatt House hotel.
                 </div>
             </div>
             <div class="col-sm-6">
