--- a/gallery.html
+++ b/gallery.html
@@ -30,10 +30,10 @@
                 </a>
                 <ul class="nav navbar-nav">
                     <li><a href="details.html">Schedule of Events</a></li>
-                    <li><a class="selected" href="hotel.html">Hotel</a></li>
+                    <li><a href="hotel.html">Hotel</a></li>
                     <li><a href="registry.html">Registry</a></li>
                     <li><a href="bridal-party.html">Wedding Party</a></li>
-                    <li><a href="gallery.html">Gallery</a></li>
+                    <li><a class="selected" href="gallery.html">Gallery</a></li>
                 </ul>
             </div>
             <div class="navbar__border-bottom">
@@ -41,45 +41,18 @@
         </nav>
 
 <!-- Begin Page-specific content here -->
-        <div class="row overview-row">
-            <div class="center-col-9">
-                We have reserved some hotel room blocks at two hotels near the wedding venue. To reserve your room, please mention that you are attending the Desai/Connelly wedding.
-            </div>
-        </div>
         <div class="row">
-            <div class="center-col-9">
-                <div class="col-sm-3">
-                    <div class="hotel__info">
-                        <h3 class="page-title">Fishkill Hyatt House</h3>
-                        <p>
-                            100 Westage Business Ctr Dr
-                            <br>
-                            Fishkill, NY 12524
-                            <br>
-                            Tel: 1-845-897-5757
-                        </p>
-                        <a href="http://www.fishkill.house.hyatt.com/en/hotel/home.html" target="_blank">more info</a>
-                    </div>
-
-                    <div class="hotel__info">
-                        <h3 class="page-title">Marriott Courtyard Fishkill</h3>
-                        <p>
-                            17 Westage Dr/Route 9 &amp; I-84
-                            <br>
-                            Fishkill, NY 12524
-                            <br>
-                            Tel: 1-845-897-2400
-                        </p>
-                        <a href="http://cwp.marriott.com/fhkny/desaiconnellywedding/" target="_blank">more info</a>
-                    </div>
+            <h3 class="column-title">Around the World Gallery</h3>
+            <div class="col-sm-6">
+                <div class="gallery__container">
+                    <img class="gallery__img" src="images/gallery/eg_baseball.jpg" />
+                    <div class="gallery__description"><strong>New York</strong>, at the baseball game</div>
                 </div>
-                <div class="col-sm-6">
-                    <a href="http://www.fishkill.house.hyatt.com/en/hotel/home.html" target="_blank">
-                        <img class="hotel__img" src="images/hotel/hyatt.jpg" alt="Hyatt House hotel" />
-                    </a>
-                    <a href="http://cwp.marriott.com/fhkny/desaiconnellywedding/" target="_blank">
-                        <img class="hotel__img" src="images/hotel/courtyard.jpg" alt="Marriott Courtyard hotel" />
-                    </a>
+            </div>
+            <div class="col-sm-6">
+                <div class="gallery__container">
+                    <img class="gallery__img" src="images/gallery/eg_faces.jpg" />
+                    <div class="gallery__description"><strong>New York</strong>, picnic in Central Park</div>
                 </div>
             </div>
         </div>
