--- a/index.html
+++ b/index.html
@@ -25,12 +25,11 @@
 
                 <nav class="navbar navbar-default" role="navigation">
                     <div class="collapse navbar-collapse" id="eg-navbar">
-                        <div class="navbar-icon__container">
+                        <a href="index.html" class="navbar-icon__container">
                             <img class="elephant-icon--small" src="images/red_elephant_transparent_left.png" />
                             <img class="elephant-icon--small" src="images/red_elephant_transparent_right.png" />
-                        </div>
+                        </a>
                         <ul class="nav navbar-nav">
-                            <li><a class="selected rounded-border" href="index.html">Home</a></li>
                             <li><a href="details.html">Schedule of Events</a></li>
                             <li><a href="hotel.html">Hotel</a></li>
                             <li><a href="registry.html">Registry</a></li>
