Testing out bridal party re-styles

--- a/bridal-party.html
+++ b/bridal-party.html
@@ -43,18 +43,18 @@
 <!-- Begin Page-specific content here -->
         <div class="row">
             <div class="col-sm-6">
-                <h3 class="column-title">Hers</h3>
+                <h3 class="column-title main-sub-title wedding-font">Hers</h3>
                 <div class="bridal-party__container">
                     <div class="bridal-party__entry">
                         <div class="bridal-party__name">Medini Ciavardoni</div>
-                        <div class="bridal-party__description">We have been friends since we were 5 years old. We spent many summers together at the Ashram getting into mischief. (Her fault)</div>
+                        <div class="bridal-party__description">Gopi's friend from childhood</div>
                     </div>
                     <img id="medini-pic" class="bridal-party__img" src="images/party/medini.jpg" />
                 </div>
                 <div class="bridal-party__container">
                     <div class="bridal-party__entry">
                         <div class="bridal-party__name">Maggie Kissel</div>
-                        <div class="bridal-party__description">My roommate in Med School, she is great for keeping me alive and sane</div>
+                        <div class="bridal-party__description">Gopi's friend and roommate from medical school</div>
                     </div>
                     <img id="maggie-pic" class="bridal-party__img" src="images/party/maggie.jpg" />
                 </div>
